[package]
name = "interview-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "0.6.3", features = [
    "server",
    "macros",
    "transport-io",
    "schemars",
] }
tokio = { version = "1", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "io-std",
    "signal",
    "fs",
    "process",
] }
chrono = "0.4.41"
uuid = { version = "1.18.1", features = ["v4"] }
anyhow = "1.0.99"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "std",
    "fmt",
] }

reqwest = { version = "0.12.23" }
